--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(nest_.Spatial)
 export(stat_nested)
 importFrom(dplyr,as_data_frame)
 importFrom(dplyr,bind_cols)
+importFrom(dplyr,bind_rows)
 importFrom(dplyr,group_by_)
 importFrom(ggplot2,GeomPolygon)
 importFrom(ggplot2,Stat)
