--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,13 +3,19 @@
 S3method(plot,spnest)
 export(StatNested)
 export(geom_holygon)
+export(grasp)
 export(nest1_.Spatial)
 export(nest_.Spatial)
 export(stat_nested)
+importFrom(dplyr,"%>%")
 importFrom(dplyr,as_data_frame)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,distinct)
 importFrom(dplyr,group_by_)
+importFrom(dplyr,mutate)
+importFrom(dplyr,select)
+importFrom(dplyr,select_)
 importFrom(ggplot2,GeomPolygon)
 importFrom(ggplot2,Stat)
 importFrom(ggplot2,aes)
@@ -23,5 +29,6 @@ importFrom(grid,pathGrob)
 importFrom(scales,alpha)
 importFrom(sp,proj4string)
 importFrom(spbabel,sptable)
+importFrom(tibble,tibble)
 importFrom(tidyr,nest_)
 importFrom(tidyr,unnest)
